src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Valspar Master Channel Partner Asset Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formula_Database_Update_Comments__c</fullName>
        <description>Masters</description>
        <label>Formula Database Update Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Database_Update_Date__c</fullName>
        <description>Used for tint machines</description>
        <label>Formula Database Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_Database_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Masters - who updated tint database - Valspar Employee</description>
        <label>Formula Database Updated By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formula_Database_Version__c</fullName>
        <description>Masters</description>
        <label>Formula Database Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Support_Company_Name__c</fullName>
        <description>In store assets - local contact info</description>
        <label>Local Support Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Support_Contact_Name__c</fullName>
        <description>In Store Assets - Local support contact info</description>
        <label>Local Support Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Support_Contact_Phone_Number__c</fullName>
        <description>In store assets - local contact number</description>
        <label>Local Support Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>If the asset has a password then please record it</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>